# CbD_In_EarningCalls

./: .env.example  .gitignore  .pre-commit-config.yaml  QuantGAN.ipynb  README.md  desktop.ini  earnings_sentiment.csv  opai1.py  pyproject.toml
notebooks/: construct_panel.ipynb  finbert_sentiment.ipynb  panel_transformation.ipynb  segmentation.ipynb
src/quantum_cognition/: main.py  segmentation_keyphrases.py
transcripts/: AAPL_Q1_2025.txt
